--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="sustainable_city_navigator">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="./icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="./favicon.png"/>
 
   <title>sustainable_city_navigator</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
 
   <!-- No external APIs needed - using OpenRouteService and Supabase -->
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="./flutter_bootstrap.js" async></script>
 </body>
 </html>
-
